# NeuralNetworkKernel

./: .gitignore  CMakeLists.txt  README.md
docker/ub1804/: Dockerfile
nnk/: CMakeLists.txt
nnk/allocator/: allocator.cc  allocator.h
nnk/container/: CMakeLists.txt  tapes.h  tensor.cc  tensor.h
nnk/contianer/: tensor.h
test/: CMakeLists.txt  test.cc  test_eigen.cc
